--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -13,19 +13,125 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# module name here\n",
+    "# Some Core Utilities\n",
     "\n",
-    "> API details."
+    "> A place to keep some common code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "#hide\n",
     "from nbdev.showdoc import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cells can be hidden (with #hide). Cells with code that we want to export get an #export flag and will be placed into whatever file is specified in the first cell (`core.py` in this case). All other cells are treated as tests and will be executed as part of the CI included with NBDEV. In some cases we don't want to run cells every time - they can be marked with #slow or #skiptest and going forward will then only be run if we explicitly decide to do this.\n",
+    "\n",
+    "Let's start by exporting some demo code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def demo_code():\n",
+    "    return 'demo_modified'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can run this code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'demo_modified'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "demo_code()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To make this a 'test' is simple:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert str(demo_code()) == 'demo_modified'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here's a cell that I want to run now but would be too slow for testing. In fact, it's one I never want to run:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#skiptest\n",
+    "import time # This import should really be in a separate cell, especially if time is used elsewhere\n",
+    "time.sleep(100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can export the code from these notebooks and build the docs from the command line, but it is also useful to export the code from within the notebook. So the last cell here does just that:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted 00_core.ipynb.\n",
+      "Converted index.ipynb.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nbdev.export import notebook2script; notebook2script()"
    ]
   },
   {
@@ -41,6 +147,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
