Testing show/hide of cells

--- a/index.ipynb
+++ b/index.ipynb
@@ -27,13 +27,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If we're making changes to those files a lot, autoreload comes in handy:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -48,6 +41,8 @@
     }
    ],
    "source": [
+    "# hide\n",
+    "# Might be handy\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
    ]
