--- a/01_Cairo_Hello.ipynb
+++ b/01_Cairo_Hello.ipynb
@@ -41,6 +41,7 @@
    "outputs": [],
    "source": [
     "#export\n",
+    "#show\n",
     "import cairocffi as cairo\n",
     "from IPython.display import Image, display\n",
     "\n",
@@ -96,6 +97,7 @@
     }
    ],
    "source": [
+    "#hide\n",
     "from nbdev.export import notebook2script; notebook2script()"
    ]
   },
