ipycanvas working on interactivity

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -126,6 +126,11 @@
      "output_type": "stream",
      "text": [
       "Converted 00_core.ipynb.\n",
+      "Converted 01_Cairo_Hello.ipynb.\n",
+      "Converted 02_Meeting_Mice.ipynb.\n",
+      "Converted 03_Augmenting_Animals.ipynb.\n",
+      "Converted 05_Playing_with_Perlin.ipynb.\n",
+      "Converted 06_Interaction_with_ipycanvas.ipynb.\n",
       "Converted index.ipynb.\n"
      ]
     }
@@ -133,6 +138,13 @@
    "source": [
     "from nbdev.export import notebook2script; notebook2script()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
