--- a/05_Playing_with_Perlin.ipynb
+++ b/05_Playing_with_Perlin.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# default_exp perlin"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -13,24 +22,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For this I am NOT allowing myself to use any resources other than the [Perlin Noise Wiki page](https://en.wikipedia.org/wiki/Perlin_noise)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#hide\n",
+    "#export \n",
     "from days_of_code.core import *\n",
-    "import numpy as np\n",
     "import cairocffi as cairo\n",
     "from PIL import Image\n",
-    "from matplotlib import pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For this I am NOT allowing myself to use any resources other than the [Perlin Noise Wiki page](https://en.wikipedia.org/wiki/Perlin_noise)."
+    "from matplotlib import pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "def random_grad(ix, iy):\n",
+    "    #Random float. No precomputed gradients mean this works for any number of grid coordinates\n",
+    "    random = 2920 * np.sin(ix * 21942 + iy * 171324 + 8912) * np.cos(ix * 23157 * iy * 217832 + 9758)\n",
+    "    return np.array([np.cos(random),np.sin(random)])"
    ]
   },
   {
@@ -50,11 +64,6 @@
     }
    ],
    "source": [
-    "def random_grad(ix, iy):\n",
-    "    #Random float. No precomputed gradients mean this works for any number of grid coordinates\n",
-    "    random = 2920 * np.sin(ix * 21942 + iy * 171324 + 8912) * np.cos(ix * 23157 * iy * 217832 + 9758)\n",
-    "    return np.array([np.cos(random),np.sin(random)])\n",
-    "\n",
     "random_grad(0.3, 23)"
    ]
   },
@@ -73,7 +82,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f16dafe7dd0>"
+       "<matplotlib.image.AxesImage at 0x7f6b3632eed0>"
       ]
      },
      "execution_count": null,
@@ -110,19 +119,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.1175543716656112"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#export\n",
     "def interpolate(a0, a1, w):\n",
     "    \"\"\" Interpolate between the two points, with weight 0<w<1 \"\"\"\n",
     "#     return (a1 - a0) * w + a0 # Can make this smoother later\n",
@@ -160,8 +159,26 @@
     "    ix1 = interpolate(n0, n1, sx)\n",
     "\n",
     "    value = interpolate(ix0, ix1, sy)\n",
-    "    return value\n",
-    "\n",
+    "    return value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1175543716656112"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "perlin(0.1, 0.3)"
    ]
   },
@@ -173,7 +190,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f16da7092d0>"
+       "<matplotlib.image.AxesImage at 0x7f6b382c6e50>"
       ]
      },
      "execution_count": null,
@@ -201,11 +218,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def perlin_grid(w, h, x_bounds=(0, 1), y_bounds=(0, 1)):\n",
+    "    nx, ny = w, h\n",
+    "    x = np.linspace(*x_bounds, nx)\n",
+    "    y = np.linspace(*y_bounds, ny)\n",
+    "    xv, yv = np.meshgrid(x, y)\n",
+    "    return perlin(xv, yv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f16da60a310>"
+       "<matplotlib.image.AxesImage at 0x7f6b381c0390>"
       ]
      },
      "execution_count": null,
@@ -226,13 +258,6 @@
     }
    ],
    "source": [
-    "def perlin_grid(w, h, x_bounds=(0, 1), y_bounds=(0, 1)):\n",
-    "    nx, ny = w, h\n",
-    "    x = np.linspace(*x_bounds, nx)\n",
-    "    y = np.linspace(*y_bounds, ny)\n",
-    "    xv, yv = np.meshgrid(x, y)\n",
-    "    return perlin(xv, yv)\n",
-    "\n",
     "fig, (ax0, ax1, ax2) = plt.subplots(1, 3)\n",
     "ax0.imshow(perlin_grid(200, 200))\n",
     "ax1.imshow(perlin_grid(200, 200, x_bounds=(0, 5), y_bounds=(0, 5)))\n",
@@ -254,7 +279,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f16d9e3db10>"
+       "<matplotlib.image.AxesImage at 0x7f6b38612190>"
       ]
      },
      "execution_count": null,
@@ -289,7 +314,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "da07995ed1a04631a02ee6094786bd4c",
+       "model_id": "67f834edc8d34b6fae450c94ce6a3947",
        "version_major": 2,
        "version_minor": 0
       },
