--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -15,7 +15,9 @@
    "source": [
     "# Some Core Utilities\n",
     "\n",
-    "> A place to keep some common code"
+    "> A place to keep some common code\n",
+    "\n",
+    "This is a place to store some common code/utilities that will be used frequently in other notebooks. I started on it before formally launching the project, so it also has some notes to myself around the inner workings of nbdev. "
    ]
   },
   {
@@ -131,6 +133,7 @@
       "Converted 03_Augmenting_Animals.ipynb.\n",
       "Converted 05_Playing_with_Perlin.ipynb.\n",
       "Converted 06_Interaction_with_ipycanvas.ipynb.\n",
+      "Converted 07_Doing_some_documentation.ipynb.\n",
       "Converted index.ipynb.\n"
      ]
     }
@@ -138,13 +141,6 @@
    "source": [
     "from nbdev.export import notebook2script; notebook2script()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
