--- a/06_Interaction_with_ipycanvas.ipynb
+++ b/06_Interaction_with_ipycanvas.ipynb
@@ -39,7 +39,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b01977267634a18aecdf6e42999df03",
+       "model_id": "2d97732dfb014f58b43fb20003ab66b4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -78,12 +78,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1968920ad61b48b8b040f00f022daaeb",
+       "model_id": "1ef73b2e58c64bb0acf0f8de46ba6060",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Canvas(width=800)"
+       "Canvas(sync_image_data=True, width=800)"
       ]
      },
      "metadata": {},
@@ -103,7 +103,7 @@
     "y = np.array(np.random.rayleigh(250, n_particles))\n",
     "size = np.random.randint(1, 3, n_particles)\n",
     "\n",
-    "canvas = Canvas(width=800, height=500)\n",
+    "canvas = Canvas(width=800, height=500, sync_image_data=True)\n",
     "\n",
     "for i in range(steps):\n",
     "    # Draw\n",
@@ -116,6 +116,15 @@
     "    y += np.cos(angles)*delta\n",
     "\n",
     "canvas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "canvas.to_file('perlin_ipycanvas1.png') # Saving to file requires sync_image_data=True when making the canvas"
    ]
   },
   {
@@ -142,7 +151,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c7581e85e7ba43b48ef86ecc4cf887d5",
+       "model_id": "af118a30d7244f69a951d6cc0f67ba5d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -234,7 +243,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "45e4d3c0446c426b84c5c6748df708f1",
+       "model_id": "20d6e649059a4c6ab44b1e072a329e52",
        "version_major": 2,
        "version_minor": 0
       },
@@ -248,7 +257,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "861c052930df4b5d871d9783e6cfc7e2",
+       "model_id": "0a8f60bd8f0842589a826175aa84a240",
        "version_major": 2,
        "version_minor": 0
       },
@@ -329,26 +338,6 @@
    "outputs": [],
    "source": [
     "rt.stop()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(5000,)"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x.shape"
    ]
   }
  ],
