--- a/index.ipynb
+++ b/index.ipynb
@@ -81,25 +81,53 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Sumary of the Journey\n",
+    "\n",
+    "I set this up (configuring nbdev etc) one weekend so that I could dive straight in on the Monday and start coding. You can use the sidebar on the left to view the notebook for each day, but here I will try to summarise what was keeping me busy as this project unfolded."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Today is a Saturday - but I'm keen to get started and at least lay the foundation so that on Monday I can jump right in rather than starting with all the setup (although it was nice and easy thanks to NBDev - thanks team!)"
+    "### Week 1\n",
+    "\n",
+    "Day 1 was getting used to cairo and doing some basic widget tests to get animation working to my satisfaction. Day 2 this cairo knowledge came in handy doing some visualizations for the AIcrowd [Multi-Agent BEhaviour Challenge](https://www.aicrowd.com/challenges/multi-agent-behavior-representation-modeling-measurement-and-applications) \n",
+    "<img src=\"mabe_movement_viz.png\" style=\"width: 250px;\">\n",
+    "\n",
+    "For day 2 and 3 I was pretty sidetracked with this competition, spending much more than an hour a day working on it. The resulting code is scattered across a bunch of notebooks in my Google Drive, but I will be documenting this process in a separate project to be released once that competition ends. \n",
+    "\n",
+    "On Friday (day 5) I decided I couldn't just use my competition playing as my 'days of code' requirement, so I switched things up and decided to try something I'd been meaning to look into for a while: Perlin noise. This is a topic that comes up a lot in generative art and graphics. It turns out the Wikipedia page was all I needed to get some cool images happening - by using perlin noise to steer particles and leave trails you can get some trippy images:\n",
+    "<table><tr>\n",
+    "<td> <img src=\"perlin_turtles.png\" alt=\"Drawing\" style=\"width: 250px;\"/> </td>\n",
+    "<td> <img src=\"perlin_turtles2.png\" alt=\"Drawing\" style=\"width: 250px;\"/> </td>\n",
+    "    <td> <img src=\"perlin_turtles3.png\" alt=\"Drawing\" style=\"width: 250px;\"/> </td>\n",
+    "</tr></table>"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Week 2\n",
+    "\n",
+    "On day 6 I moved to ipycanvas hoping to make some interactive graphics stuff. It was good fun, and seeing thousands of circles move and shift and react to mouse clicks was satisfying. Sadly it doesn't leave an artefact that I can embed into these html docs, so you'll have to take my word for it or wait for my recap video(s) and make do with this static image for now:\n",
+    "<img src=\"perlin_ipycanvas1.png\" style=\"width: 500px;\">\n",
+    "\n",
+    "Day 7 was a documentation day - I wrote the summary so far and tidied notebooks 1-6, making them easier to read and removing some duplicated cells and other cruft that was left over from the initial experimentation. I did write some code as I re-factored things, but it was mostly admin. I think this is important, and I will do 'documentation days' every week or two to keep things organised.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conclusion\n",
+    "\n",
+    "This is going well so far - I will try to keep this updated :)"
+   ]
   }
  ],
  "metadata": {
