Cleaning up a little

--- a/06_Interaction_with_ipycanvas.ipynb
+++ b/06_Interaction_with_ipycanvas.ipynb
@@ -39,7 +39,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d97732dfb014f58b43fb20003ab66b4",
+       "model_id": "cc23b23c5f0c4e0da5ba6da30895c08d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -78,7 +78,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ef73b2e58c64bb0acf0f8de46ba6060",
+       "model_id": "38ddccc9f2244e07b0790d7fed05793b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -124,6 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#skiptest\n",
     "canvas.to_file('perlin_ipycanvas1.png') # Saving to file requires sync_image_data=True when making the canvas"
    ]
   },
@@ -151,7 +152,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af118a30d7244f69a951d6cc0f67ba5d",
+       "model_id": "057abf488ec143c581ef7e575a012f08",
        "version_major": 2,
        "version_minor": 0
       },
@@ -243,7 +244,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20d6e649059a4c6ab44b1e072a329e52",
+       "model_id": "16a206770b044b9eb1dac95ad42922b6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -257,7 +258,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0a8f60bd8f0842589a826175aa84a240",
+       "model_id": "7f361111663e4921a7350fa9fdbd5aac",
        "version_major": 2,
        "version_minor": 0
       },
