--- a/07_Doing_some_documentation.ipynb
+++ b/07_Doing_some_documentation.ipynb
@@ -32,7 +32,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# PS the rest of this was me testing state and such, ignore"
+   ]
   },
   {
    "cell_type": "code",
