Trying to get CI to pass...

--- a/07_Doing_some_documentation.ipynb
+++ b/07_Doing_some_documentation.ipynb
@@ -71,6 +71,7 @@
     }
    ],
    "source": [
+    "#skiptest\n",
     "from ipywidgets import Label, HTML, HBox, Image, VBox, Box, HBox\n",
     "from ipyevents import Event \n",
     "from IPython.display import display\n",
@@ -141,6 +142,7 @@
     }
    ],
    "source": [
+    "#skiptest\n",
     "from ipywidgets import Label, HTML, HBox, Image, VBox, Box, HBox\n",
     "from ipyevents import Event \n",
     "from IPython.display import display\n",
@@ -173,6 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#skiptest\n",
     "from threading import Timer\n",
     "\n",
     "class RepeatedTimer(object):\n",
@@ -220,6 +223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#skiptest\n",
     "rt.stop() # better in a try/finally block to make sure the program ends!"
    ]
   },
