A bit of tidying and adding pics of 3D print

--- a/notebooks/06_Interaction_with_ipycanvas.ipynb
+++ b/notebooks/06_Interaction_with_ipycanvas.ipynb
@@ -35,7 +35,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f8d1358eaa5c4bc39fab7d9e2cda080a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(height=150, width=200)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from ipycanvas import Canvas\n",
     "\n",
@@ -59,7 +74,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f2d0d82ad9584b248fe5e28a1d89e401",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(sync_image_data=True, width=800)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import days_of_code\n",
     "from days_of_code.perlin import *\n",
@@ -95,7 +125,7 @@
    "outputs": [],
    "source": [
     "#skiptest\n",
-    "canvas.to_file('perlin_ipycanvas1.png') # Saving to file requires sync_image_data=True when making the canvas"
+    "canvas.to_file('outputs/perlin_ipycanvas1.png') # Saving to file requires sync_image_data=True when making the canvas"
    ]
   },
   {
@@ -118,7 +148,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5c338df9e71248cbb7487595f9d247a1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(width=800)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#skiptest\n",
     "from time import sleep\n",
@@ -195,7 +240,36 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dc95a328191d4580be1562a2d4e1cff4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(width=800)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e295264882c24e3b9dabcf5147b06c6b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='Event info')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from ipywidgets import Label, HTML\n",
     "from copy import deepcopy\n",
@@ -266,6 +340,13 @@
    "source": [
     "rt.stop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
