--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -96,18 +96,16 @@
     "### Week 1\n",
     "\n",
     "Day 1 was getting used to cairo and doing some basic widget tests to get animation working to my satisfaction. Day 2 this cairo knowledge came in handy doing some visualizations for the AIcrowd [Multi-Agent BEhaviour Challenge](https://www.aicrowd.com/challenges/multi-agent-behavior-representation-modeling-measurement-and-applications) \n",
-    "<img src=\"mabe_movement_viz.png\" style=\"width: 250px;\">\n",
+    "<img src=\"outputs/mabe_movement_viz.png\" style=\"width: 250px;\">\n",
     "\n",
     "For day 2 and 3 I was pretty sidetracked with this competition, spending much more than an hour a day working on it. The resulting code is scattered across a bunch of notebooks in my Google Drive, but I will be documenting this process in a separate project to be released once that competition ends. \n",
     "\n",
     "On Friday (day 5) I decided I couldn't just use my competition playing as my 'days of code' requirement, so I switched things up and decided to try something I'd been meaning to look into for a while: Perlin noise. This is a topic that comes up a lot in generative art and graphics. It turns out the Wikipedia page was all I needed to get some cool images happening - by using perlin noise to steer particles and leave trails you can get some trippy images:\n",
     "<table><tr>\n",
     "<td> \n",
-    "<img src=\"perlin_turtles.png\" alt=\"Drawing\" style=\"width: 250px;\"/> </td>\n",
+    "<img src=\"outputs/perlin_turtles.png\" alt=\"Drawing\" style=\"width: 250px;\"/> </td>\n",
     "<td> \n",
-    "<img src=\"perlin_turtles2.png\" alt=\"Drawing2\" style=\"width: 250px;\"/> </td>\n",
-    "<td> \n",
-    "<img src=\"perlin_turtles3.png\" alt=\"Drawing3\" style=\"width: 250px;\"/> </td>\n",
+    "<img src=\"outputs/perlin_turtles2.png\" alt=\"Drawing2\" style=\"width: 250px;\"/> </td>\n",
     "</tr></table>"
    ]
   },
@@ -118,9 +116,31 @@
     "### Week 2\n",
     "\n",
     "On day 6 I moved to ipycanvas hoping to make some interactive graphics stuff. It was good fun, and seeing thousands of circles move and shift and react to mouse clicks was satisfying. Sadly it doesn't leave an artefact that I can embed into these html docs, so you'll have to take my word for it or wait for my recap video(s) and make do with this static image for now:\n",
-    "<img src=\"perlin_ipycanvas1.png\"  style=\"width: 500px;\">\n",
+    "<img src=\"outputs/perlin_ipycanvas1.png\"  style=\"width: 500px;\">\n",
     "\n",
-    "Day 7 was a documentation day - I wrote the summary so far and tidied notebooks 1-6, making them easier to read and removing some duplicated cells and other cruft that was left over from the initial experimentation. I did write some code as I re-factored things, but it was mostly admin. I think this is important, and I will do 'documentation days' every week or two to keep things organised.\n"
+    "Day 7 was a documentation day - I wrote the summary so far and tidied notebooks 1-6, making them easier to read and removing some duplicated cells and other cruft that was left over from the initial experimentation. I did write some code as I re-factored things, but it was mostly admin. I think this is important, and I will do 'documentation days' every week or two to keep things organised.\n",
+    "\n",
+    "You'll notice day 8 is missing - I did some playing with a separate project (TODO link birdio).\n",
+    "\n",
+    "Days 9 and 10 I was playing with [my entry into the Hackaday Data Loggin' Contest](https://hackaday.io/project/178286-data-driven-mood-light). The data is a record of how many times a certain kind of event happened every day for the past few years. \n",
+    "\n",
+    "Day 9 was EDA and using cairo to try and make some pretty visualizations:\n",
+    "\n",
+    "<table><tr>\n",
+    "<td> \n",
+    "<img src=\"outputs/day_counts_left_to_right.png\" alt=\"Drawing\" style=\"width: 350px;\"/> </td>\n",
+    "<td> \n",
+    "<img src=\"outputs/day_counts_spiral.png\" alt=\"Drawing2\" style=\"width: 350px;\"/> </td>\n",
+    "</tr></table>\n",
+    "\n",
+    "And day 10 took things 3D, using a python equivalent of OpenSCAD to make some 3D shapes which I could then 3D print:\n",
+    "\n",
+    "<table><tr>\n",
+    "<td> \n",
+    "<img src=\"../images/drawing_spheres.png\" alt=\"Drawing\" style=\"width: 350px;\"/> </td>\n",
+    "<td> \n",
+    "<img src=\"../images/3d_print.jpeg\" alt=\"Drawing2\" style=\"width: 350px;\"/> </td>\n",
+    "</tr></table>"
    ]
   },
   {
