--- a/notebooks/00_core.ipynb
+++ b/notebooks/00_core.ipynb
@@ -108,7 +108,7 @@
    "source": [
     "#skiptest\n",
     "import time # This import should really be in a separate cell, especially if time is used elsewhere\n",
-    "time.sleep(100)"
+    "time.sleep(10)"
    ]
   },
   {
@@ -134,6 +134,8 @@
       "Converted 05_Playing_with_Perlin.ipynb.\n",
       "Converted 06_Interaction_with_ipycanvas.ipynb.\n",
       "Converted 07_Doing_some_documentation.ipynb.\n",
+      "Converted 09_Data_Bubbles.ipynb.\n",
+      "Converted 10_Going_3D.ipynb.\n",
       "Converted index.ipynb.\n"
      ]
     }
