--- a/notebooks/09_Data_Bubbles.ipynb
+++ b/notebooks/09_Data_Bubbles.ipynb
@@ -262,17 +262,9 @@
     "    # For animation I saved images with:\n",
     "#     surface.write_to_png(f'outputs/day_count_ims/{i}.png')\n",
     "    imw.value = surface.write_to_png()\n",
-    "        \n",
+    "\n",
+    "surface.write_to_png(f'outputs/day_counts_left_to_right.png')\n",
     "display_surface(surface) # Show the final result for posterity (looses the alpha channel sadly...)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "surface.write_to_png(f'outputs/day_counts_left_to_right.png')"
    ]
   }
  ],
