--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -133,7 +133,7 @@
     "<img src=\"outputs/day_counts_spiral.png\" alt=\"Drawing2\" style=\"width: 350px;\"/> </td>\n",
     "</tr></table>\n",
     "\n",
-    "And day 10 took things 3D, using a python equivalent of OpenSCAD to make some 3D shapes which I could then 3D print:\n",
+    "And day 10 took things 3D, using [SolidPython](https://github.com/SolidCode/SolidPython) (a python equivalent of OpenSCAD) to make some 3D shapes which I could then 3D print:\n",
     "\n",
     "<table><tr>\n",
     "<td> \n",
