Reorganising ims and rebuilding docs

--- a/notebooks/05_Playing_with_Perlin.ipynb
+++ b/notebooks/05_Playing_with_Perlin.ipynb
@@ -327,6 +327,8 @@
     }
    ],
    "source": [
+    "#skiptest\n",
+    "\n",
     "# Playing with CAIRO\n",
     "import ipywidgets as widgets\n",
     "import random\n",
@@ -416,6 +418,8 @@
     }
    ],
    "source": [
+    "#skiptest\n",
+    "\n",
     "# Set up surface\n",
     "surface = cairo.ImageSurface(cairo.FORMAT_ARGB32, 1024, 1024) # Create the surface\n",
     "ctx = cairo.Context(surface)\n",
