--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -137,9 +137,9 @@
     "\n",
     "<table><tr>\n",
     "<td> \n",
-    "<img src=\"../images/drawing_spheres.png\" alt=\"Drawing\" style=\"width: 350px;\"/> </td>\n",
+    "<img src=\"images/drawing_spheres.png\" alt=\"Drawing\" style=\"width: 350px;\"/> </td>\n",
     "<td> \n",
-    "<img src=\"../images/3d_print.jpeg\" alt=\"Drawing2\" style=\"width: 350px;\"/> </td>\n",
+    "<img src=\"images/3d_print.jpeg\" alt=\"Drawing2\" style=\"width: 350px;\"/> </td>\n",
     "</tr></table>"
    ]
   },
