--- a/notebooks/10_Going_3D.ipynb
+++ b/notebooks/10_Going_3D.ipynb
@@ -15,6 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#skiptest\n",
     "from solid import *\n",
     "from solid.utils import *  # Not required, but the utils module is useful"
    ]
@@ -25,6 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#skiptest\n",
     "import viewscad"
    ]
   },
@@ -45,6 +47,7 @@
     }
    ],
    "source": [
+    "#skiptest\n",
     "d = difference()(\n",
     "    cube(10),  # Note the comma between each element!\n",
     "    sphere(12)\n",
@@ -73,6 +76,7 @@
     }
    ],
    "source": [
+    "#skiptest\n",
     "r = viewscad.Renderer()\n",
     "r.render(d)"
    ]
@@ -98,6 +102,7 @@
     }
    ],
    "source": [
+    "#skiptest\n",
     "from math import cos, radians, sin, pi, tau\n",
     "\n",
     "o = translate([0, 1, 0])(sphere(r=0.2))\n",
@@ -195,6 +200,7 @@
     }
    ],
    "source": [
+    "#skiptest\n",
     "import pandas as pd\n",
     "df = pd.read_csv('data/day_counts.csv', parse_dates=['Date']).fillna(0)\n",
     "df.head()"
@@ -218,6 +224,7 @@
     }
    ],
    "source": [
+    "#skiptest\n",
     "chunks = []\n",
     "for i in range(0, len(df), 28):\n",
     "    chunks.append(df['Count'].values[i:i+28])\n",
