--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -103,9 +103,13 @@
     "On Friday (day 5) I decided I couldn't just use my competition playing as my 'days of code' requirement, so I switched things up and decided to try something I'd been meaning to look into for a while: Perlin noise. This is a topic that comes up a lot in generative art and graphics. It turns out the Wikipedia page was all I needed to get some cool images happening - by using perlin noise to steer particles and leave trails you can get some trippy images:\n",
     "<table><tr>\n",
     "<td> \n",
-    "<img src=\"outputs/perlin_turtles.png\" alt=\"Drawing\" style=\"width: 250px;\"/> </td>\n",
+    "<div style=\"width: 250px;\">\n",
+    "<img src=\"outputs/perlin_turtles.png\" alt=\"Drawing\"/> </td>\n",
+    "</div>\n",
     "<td> \n",
+    "<div style=\"width: 250px;\">\n",
     "<img src=\"outputs/perlin_turtles2.png\" alt=\"Drawing2\" style=\"width: 250px;\"/> </td>\n",
+    "</div>\n",
     "</tr></table>"
    ]
   },
@@ -116,7 +120,10 @@
     "### Week 2\n",
     "\n",
     "On day 6 I moved to ipycanvas hoping to make some interactive graphics stuff. It was good fun, and seeing thousands of circles move and shift and react to mouse clicks was satisfying. Sadly it doesn't leave an artefact that I can embed into these html docs, so you'll have to take my word for it or wait for my recap video(s) and make do with this static image for now:\n",
-    "<img src=\"outputs/perlin_ipycanvas1.png\"  style=\"width: 500px;\">\n",
+    "\n",
+    "<div style=\"width: 50%; display: block; margin-left: auto;  margin-right: auto;\">\n",
+    "<img src=\"outputs/perlin_ipycanvas1.png\">\n",
+    "</div>\n",
     "\n",
     "Day 7 was a documentation day - I wrote the summary so far and tidied notebooks 1-6, making them easier to read and removing some duplicated cells and other cruft that was left over from the initial experimentation. I did write some code as I re-factored things, but it was mostly admin. I think this is important, and I will do 'documentation days' every week or two to keep things organised.\n",
     "\n",
@@ -137,9 +144,13 @@
     "\n",
     "<table><tr>\n",
     "<td> \n",
-    "<img src=\"images/drawing_spheres.png\" alt=\"Drawing\" style=\"width: 350px;\"/> </td>\n",
+    "<div style=\"width: 350px;\">\n",
+    "<img src=\"images/drawing_spheres.png\" alt=\"Drawing\"/> </td>\n",
+    "</div>\n",
     "<td> \n",
-    "<img src=\"images/3d_print.jpeg\" alt=\"Drawing2\" style=\"width: 350px;\"/> </td>\n",
+    "<div style=\"width: 350px;\">\n",
+    "<img src=\"images/3d_print.jpeg\" alt=\"Drawing2\"/> </td>\n",
+    "</div>\n",
     "</tr></table>"
    ]
   },
