--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "#hide\n",
-    "from days_of_code.core import *"
+    "from days_of_code.core import *\n",
+    "from IPython.display import HTML, display"
    ]
   },
   {
@@ -101,15 +102,24 @@
     "For day 2 and 3 I was pretty sidetracked with this competition, spending much more than an hour a day working on it. The resulting code is scattered across a bunch of notebooks in my Google Drive, but I will be documenting this process in a separate project to be released once that competition ends. \n",
     "\n",
     "On Friday (day 5) I decided I couldn't just use my competition playing as my 'days of code' requirement, so I switched things up and decided to try something I'd been meaning to look into for a while: Perlin noise. This is a topic that comes up a lot in generative art and graphics. It turns out the Wikipedia page was all I needed to get some cool images happening - by using perlin noise to steer particles and leave trails you can get some trippy images:\n",
-    "<table><tr>\n",
+    "<!-- <table><tr>\n",
     "<td> \n",
     "<div style=\"width: 250px;\">\n",
-    "<img src=\"outputs/perlin_turtles.png\" alt=\"Drawing\"/> </td>\n",
+    "<img src=\"outputs/perlin_turtles.png\" alt=\"Drawing\"/> \n",
+    "</td>\n",
     "</div>\n",
     "<td> \n",
     "<div style=\"width: 250px;\">\n",
     "<img src=\"outputs/perlin_turtles2.png\" alt=\"Drawing2\" style=\"width: 250px;\"/> </td>\n",
     "</div>\n",
+    "</tr></table> -->\n",
+    "\n",
+    "<table><tr>\n",
+    "<td> \n",
+    "<img src=\"outputs/perlin_turtles.png\" alt=\"Drawing\" style=\"width: 250px;\"/> \n",
+    "</td>\n",
+    "<td> \n",
+    "<img src=\"outputs/perlin_turtles2.png\" alt=\"Drawing2\" style=\"width: 250px;\"/> </td>\n",
     "</tr></table>"
    ]
   },
