--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -154,13 +154,9 @@
     "\n",
     "<table><tr>\n",
     "<td> \n",
-    "<div style=\"width: 350px;\">\n",
-    "<img src=\"images/drawing_spheres.png\" alt=\"Drawing\"/> </td>\n",
-    "</div>\n",
+    "<img src=\"images/drawing_spheres.png\" alt=\"Drawing\" style=\"width: 350px;\"/> </td>\n",
     "<td> \n",
-    "<div style=\"width: 350px;\">\n",
-    "<img src=\"images/3d_print.jpeg\" alt=\"Drawing2\"/> </td>\n",
-    "</div>\n",
+    "<img src=\"images/3d_print.jpeg\" alt=\"Drawing2\" style=\"width: 350px;\"/> </td>\n",
     "</tr></table>"
    ]
   },
