--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -134,18 +134,18 @@
     "\n",
     "<table><tr>\n",
     "<td> \n",
-    "<img src=\"outputs/day_counts_left_to_right.png\" alt=\"Drawing\" style=\"width: 350px;\"/> </td>\n",
+    "<img src=\"outputs/day_counts_left_to_right.png\" alt=\"Drawing\" width='350px'/> </td>\n",
     "<td> \n",
-    "<img src=\"outputs/day_counts_spiral.png\" alt=\"Drawing2\" style=\"width: 350px;\"/> </td>\n",
+    "<img src=\"outputs/day_counts_spiral.png\" alt=\"Drawing2\" width='350px'/> </td>\n",
     "</tr></table>\n",
     "\n",
     "And day 10 took things 3D, using [SolidPython](https://github.com/SolidCode/SolidPython) (a python equivalent of OpenSCAD) to make some 3D shapes which I could then 3D print:\n",
     "\n",
     "<table><tr>\n",
     "<td> \n",
-    "<img src=\"images/drawing_spheres.png\" alt=\"Drawing\" style=\"width: 350px;\"/> </td>\n",
+    "<img src=\"images/drawing_spheres.png\" alt=\"Drawing\" width='350px'/> </td>\n",
     "<td> \n",
-    "<img src=\"images/3d_print.jpeg\" alt=\"Drawing2\" style=\"width: 350px;\"/> </td>\n",
+    "<img src=\"images/3d_print.jpeg\" alt=\"Drawing2\" width='350px'/> </td>\n",
     "</tr></table>"
    ]
   },
