Added Observable intro notebook

--- a/notebooks/09_Data_Bubbles.ipynb
+++ b/notebooks/09_Data_Bubbles.ipynb
@@ -122,6 +122,26 @@
     {
      "data": {
       "text/plain": [
+       "7.5"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Count'].sum() - 2*df['Count'][:365].sum() # There goes the jellybean theory!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
        "<matplotlib.axes._subplots.AxesSubplot at 0x7fe09cc16650>"
       ]
      },
