Added embeds to index for observable expleriment

--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -153,6 +153,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Week 3\n",
+    "\n",
+    "Just started, but so far I am really enjoying Observable. My first notebook there played with some of the same Perlin noise ideas as day 5. But since it's all JS this time I get interactive cell outputs that I can embed anywhere! Check it out:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<iframe width=\"49%\" height=\"400\" frameborder=\"0\"\n",
+       "  src=\"https://observablehq.com/embed/@johnowhitaker/meeting-observable?cells=p_zoom%2Cviewof+scale\"></iframe>\n",
+       "<iframe width=\"49%\" height=\"430\" frameborder=\"0\"\n",
+       "  src=\"https://observablehq.com/embed/@johnowhitaker/meeting-observable?cells=anim%2Cviewof+speed\"></iframe>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#hide\n",
+    "display(HTML(\"\"\"\n",
+    "<iframe width=\"49%\" height=\"400\" frameborder=\"0\"\n",
+    "  src=\"https://observablehq.com/embed/@johnowhitaker/meeting-observable?cells=p_zoom%2Cviewof+scale\"></iframe>\n",
+    "<iframe width=\"49%\" height=\"430\" frameborder=\"0\"\n",
+    "  src=\"https://observablehq.com/embed/@johnowhitaker/meeting-observable?cells=anim%2Cviewof+speed\"></iframe>\n",
+    "\"\"\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Conclusion\n",
     "\n",
     "This is going well so far - I will try to keep this updated :)"
