Changed #hide to #hide-input so the observable embed is not removed (hopefully)

--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -181,7 +181,7 @@
     }
    ],
    "source": [
-    "#hide\n",
+    "#hide-input\n",
     "display(HTML(\"\"\"\n",
     "<iframe width=\"49%\" height=\"400\" frameborder=\"0\"\n",
     "  src=\"https://observablehq.com/embed/@johnowhitaker/meeting-observable?cells=p_zoom%2Cviewof+scale\"></iframe>\n",
