--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -101,15 +101,45 @@
     "\n",
     "For day 2 and 3 I was pretty sidetracked with this competition, spending much more than an hour a day working on it. The resulting code is scattered across a bunch of notebooks in my Google Drive, but I will be documenting this process in a separate project to be released once that competition ends. \n",
     "\n",
-    "On Friday (day 5) I decided I couldn't just use my competition playing as my 'days of code' requirement, so I switched things up and decided to try something I'd been meaning to look into for a while: Perlin noise. This is a topic that comes up a lot in generative art and graphics. It turns out the Wikipedia page was all I needed to get some cool images happening - by using perlin noise to steer particles and leave trails you can get some trippy images:\n",
-    "\n",
-    "<table><tr>\n",
+    "On Friday (day 5) I decided I couldn't just use my competition playing as my 'days of code' requirement, so I switched things up and decided to try something I'd been meaning to look into for a while: Perlin noise. This is a topic that comes up a lot in generative art and graphics. It turns out the Wikipedia page was all I needed to get some cool images happening - by using perlin noise to steer particles and leave trails you can get some trippy images:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<table style=\"margin: 0px auto;\"><tr>\n",
+       "<td> \n",
+       "<img src=\"outputs/perlin_turtles.png\" alt=\"Drawing\" width='250px'/> \n",
+       "</td>\n",
+       "<td> \n",
+       "<img src=\"outputs/perlin_turtles2.png\" alt=\"Drawing2\" width='250px'/> </td>\n",
+       "</tr></table>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#hide-input\n",
+    "display(HTML(\"\"\"\n",
+    "<table style=\"margin: 0px auto;\"><tr>\n",
     "<td> \n",
     "<img src=\"outputs/perlin_turtles.png\" alt=\"Drawing\" width='250px'/> \n",
     "</td>\n",
     "<td> \n",
     "<img src=\"outputs/perlin_turtles2.png\" alt=\"Drawing2\" width='250px'/> </td>\n",
-    "</tr></table>"
+    "</tr></table>\n",
+    "\"\"\"))"
    ]
   },
   {
@@ -118,35 +148,130 @@
    "source": [
     "### Week 2\n",
     "\n",
-    "On day 6 I moved to ipycanvas hoping to make some interactive graphics stuff. It was good fun, and seeing thousands of circles move and shift and react to mouse clicks was satisfying. Sadly it doesn't leave an artefact that I can embed into these html docs, so you'll have to take my word for it or wait for my recap video(s) and make do with this static image for now:\n",
-    "\n",
+    "On day 6 I moved to ipycanvas hoping to make some interactive graphics stuff. It was good fun, and seeing thousands of circles move and shift and react to mouse clicks was satisfying. Sadly it doesn't leave an artefact that I can embed into these html docs, so you'll have to take my word for it or wait for my recap video(s) and make do with this static image for now:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div style=\"width: 50%; display: block; margin-left: auto;  margin-right: auto;\">\n",
+       "<img src=\"outputs/perlin_ipycanvas1.png\">\n",
+       "</div>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#hide-input\n",
+    "display(HTML(\"\"\"\n",
     "<div style=\"width: 50%; display: block; margin-left: auto;  margin-right: auto;\">\n",
     "<img src=\"outputs/perlin_ipycanvas1.png\">\n",
     "</div>\n",
-    "\n",
+    "\"\"\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Day 7 was a documentation day - I wrote the summary so far and tidied notebooks 1-6, making them easier to read and removing some duplicated cells and other cruft that was left over from the initial experimentation. I did write some code as I re-factored things, but it was mostly admin. I think this is important, and I will do 'documentation days' every week or two to keep things organised.\n",
     "\n",
     "You'll notice day 8 is missing - I did some playing with a separate project (TODO link birdio).\n",
     "\n",
     "Days 9 and 10 I was playing with [my entry into the Hackaday Data Loggin' Contest](https://hackaday.io/project/178286-data-driven-mood-light). The data is a record of how many times a certain kind of event happened every day for the past few years. \n",
     "\n",
-    "Day 9 was EDA and using cairo to try and make some pretty visualizations:\n",
-    "\n",
+    "Day 9 was EDA and using cairo to try and make some pretty visualizations:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<table><tr>\n",
+       "<td> \n",
+       "<img src=\"outputs/day_counts_left_to_right.png\" alt=\"Drawing\" width='350px'/> </td>\n",
+       "<td> \n",
+       "<img src=\"outputs/day_counts_spiral.png\" alt=\"Drawing2\" width='350px'/> </td>\n",
+       "</tr></table>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#hide-input\n",
+    "display(HTML(\"\"\"\n",
     "<table><tr>\n",
     "<td> \n",
     "<img src=\"outputs/day_counts_left_to_right.png\" alt=\"Drawing\" width='350px'/> </td>\n",
     "<td> \n",
     "<img src=\"outputs/day_counts_spiral.png\" alt=\"Drawing2\" width='350px'/> </td>\n",
     "</tr></table>\n",
-    "\n",
+    "\"\"\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "And day 10 took things 3D, using [SolidPython](https://github.com/SolidCode/SolidPython) (a python equivalent of OpenSCAD) to make some 3D shapes which I could then 3D print:\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<table><tr>\n",
+       "<td> \n",
+       "<img src=\"images/drawing_spheres.png\" alt=\"Drawing\" width='350px'/> </td>\n",
+       "<td> \n",
+       "<img src=\"images/3d_print.jpeg\" alt=\"Drawing2\" width='350px'/> </td>\n",
+       "</tr></table>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#hide-input\n",
+    "display(HTML(\"\"\"\n",
     "<table><tr>\n",
     "<td> \n",
     "<img src=\"images/drawing_spheres.png\" alt=\"Drawing\" width='350px'/> </td>\n",
     "<td> \n",
     "<img src=\"images/3d_print.jpeg\" alt=\"Drawing2\" width='350px'/> </td>\n",
-    "</tr></table>"
+    "</tr></table>\n",
+    "\"\"\"))"
    ]
   },
   {
@@ -181,6 +306,7 @@
     }
    ],
    "source": [
+    "#hide-input\n",
     "display(HTML(\"\"\"\n",
     "<iframe width=\"49%\" height=\"400\" frameborder=\"0\"\n",
     "  src=\"https://observablehq.com/embed/@johnowhitaker/meeting-observable?cells=p_zoom%2Cviewof+scale\"></iframe>\n",
