--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -318,6 +318,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Tuesday and Wednesday I was sidetracked playing with Perceiver TODO notes and maybe a notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Conclusion\n",
     "\n",
     "This is going well so far - I will try to keep this updated :)"
