shader gallery test part 2

--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -218,7 +218,7 @@
       "text/html": [
        "\n",
        "<iframe width=\"99%\" height=\"400\" frameborder=\"0\"\n",
-       "  src=\"./shader_gallery.html\"></iframe>\n"
+       "  src=\"https://raw.githubusercontent.com/johnowhitaker/days_of_code/master/shader_gallery.html\"></iframe>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -231,7 +231,7 @@
    "source": [
     "display(HTML(\"\"\"\n",
     "<iframe width=\"99%\" height=\"400\" frameborder=\"0\"\n",
-    "  src=\"./shader_gallery.html\"></iframe>\n",
+    "  src=\"https://raw.githubusercontent.com/johnowhitaker/days_of_code/master/shader_gallery.html\"></iframe>\n",
     "\"\"\"))"
    ]
   },
