Addde whistlegen pic

--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -154,6 +154,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "I also generated some Irish Music using a generative language model trained on a bunch of traditional songs. \n",
+    "\n",
+    "<img src=\"images/whistlegen.png\" alt=\"Whistle music\" width='350px'/> </td>\n",
+    "\n",
+    "More info in the [video](https://www.youtube.com/watch?v=B7SEP2p4Y1A)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Week 4 (ish)\n",
     "\n",
     "I got really into shaders, and did some pretty cool things with them. My favourite exploration was the idea of slime-mould inspired simulations, with thousands (or millions - thanks to webgl) of agents move about leaving trails which can in turn affect their movement. This gives rise to all sorts of emergent behaviour - explore it in the full [observable notebook](https://observablehq.com/@johnowhitaker/dotswarm-exploring-slime-mould-inspired-shaders) or watch [my video](https://www.youtube.com/watch?v=mnuwd_z9YGE) for some pretty demos.\n",
