Finishing touches on index

--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -203,7 +203,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Webgl is very powerful but it also requires quite a bit of extra work to get up and running. Now that I have figured out at least some of the quirks, I anticipate returning to this for more experimentation in the future."
+    "Webgl is very powerful but it also requires quite a bit of extra work to get up and running. Now that I have figured out at least some of the quirks, I anticipate returning to this for more experimentation in the future. I also put some of these on a low-footprint NFT marketplace - you can collect them for cheap from https://www.hicetnunc.xyz/tz/tz1RMthfMEDJsXiMqz4Gy4DDx7utzYVNP14c\n",
+    "\n",
+    "<img src=\"images/hen.png\" alt=\"My Hic et Nuc Gallery\" width='350px'/> </td>"
    ]
   },
   {
@@ -228,9 +230,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Week 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<video src=\"images/map_series.mp4\" controls  width=\"700\"  height=\"400\">\n",
+       "      Your browser does not support the <code>video</code> element.\n",
+       "    </video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Video object>"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import Video\n",
+    "Video('images/map_series.mp4',  width=700, height=400)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- I did some even fancier stuff with shaders (video above shows some that I sold on hic et nunc, a low-carbon NFT site). You can view my full gallery [here](https://www.hicetnunc.xyz/tz/tz1RMthfMEDJsXiMqz4Gy4DDx7utzYVNP14c). It's so fun having other people collect my work. I've made ~$50 by selling code art! Fun stuff :)\n",
+    "- I spent a lot of the week working on facets of the AICROWD [ADDI Alzheimers Detection Challenge](https://www.aicrowd.com/challenges/addi-alzheimers-detection-challenge) - since all the work is locked on a VM in the cloud (it's medical data after all) I can't include that in this repo or notebook series, but I will be publishing tutorials and such through the AICROWD platform.\n",
+    "- I made a sort of tutorial/exploration notebook on dealing with class imbalance related to the challenge. I can't share it locally since the data is sensitive, but there is a view-only copy at https://www.aicrowd.com/showcase/dealing-with-class-imbalance and if you are part of the compatition you can run the code on the virtual workspace."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Conclusion\n",
     "\n",
-    "This is going well so far - I will try to keep this updated :)"
+    "At some point on this journey I was back to enjoying coding and wanting to do more, so I've let go of this specific project - it has fulfilled its purpose :) I highly recommend this to anyone looking for a way back into coding for the joy of it - aiming for a small atomic project each day helps keep things from growing to large and scary. Good luck,\n",
+    "J"
    ]
   }
  ],
